# musicCLI

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: api-health.yml
musiccli/: __init__.py  cli.py  config.py  db.py  magnets.py  remote_db.py  spotify.py  ui.py  youtube.py
scripts/: create_turso_db.py  upload_to_turso.py
